--- a/Monish.html
+++ b/Monish.html
@@ -95,7 +95,7 @@
     <header>
         <div class="header-content">
             <!-- Add your profile picture here -->
-            <img src="passport photo.jpg" alt="Your Profile Picture" class="profile-picture">
+            <img src="monish.jpg" alt="Your Profile Picture" class="profile-picture">
             <h1>Monish M</h1>
             <p>BCA</p>
         </div>
@@ -155,7 +155,7 @@
         <div class="section-content">
             <center>
             <h2>Resume</h2>
-            <a href="file.pdf" target="_blank" class="download-button">Download CV</a>
+            <a href="monish.pdf" target="_blank" class="download-button">Download CV</a>
         </center>
         </div>
         
